--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/uuid": "^9.0.1",
     "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
+    "classnames": "^2.3.2",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "framer-motion": "^10.12.2",
