--- a/package.json
+++ b/package.json
@@ -9,14 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.35",
-    "@types/react-dom": "18.0.11",
-    "@types/uuid": "^9.0.1",
     "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
-    "classnames": "^2.3.2",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "framer-motion": "^10.12.2",
@@ -28,13 +22,18 @@
     "react-hook-form": "^7.43.9",
     "react-query": "^3.39.3",
     "recoil": "^0.7.7",
-    "sass": "^1.62.0",
     "sass-loader": "^13.2.2",
+    "styled-components": "^5.3.9",
     "typescript": "5.0.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.37",
+    "@types/react-dom": "^18.0.11",
+    "@types/uuid": "^9.0.1",
     "msw": "^1.2.1"
   },
   "msw": {
