--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/styled-components": "^5.1.26",
     "@types/uuid": "^9.0.1",
     "msw": "^1.2.1"
   },
