--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@toast-ui/react-editor": "^3.2.3",
     "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
+    "dompurify": "^3.0.2",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "framer-motion": "^10.12.2",
