--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@toast-ui/react-editor": "^3.2.3",
     "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
-    "dompurify": "^3.0.2",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "framer-motion": "^10.12.2",
@@ -23,6 +22,7 @@
     "jsonwebtoken": "^9.0.0",
     "next": "13.3.0",
     "prettier": "^2.8.7",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
