--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prettier": "^2.8.7",
     "prismjs": "^1.29.0",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-query": "^3.39.3",
