--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hook-form": "^7.43.9",
     "react-query": "^3.39.3",
     "recoil": "^0.7.7",
+    "recoil-persist": "^4.2.0",
     "sass-loader": "^13.2.2",
     "styled-components": "^5.3.9",
     "typescript": "5.0.4",
